snapshots/syntax/library/statements/unload/unload_in_loop.snap
---
source: src/syntax/library/statements/unload.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: frm
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Form
                - kind: Newline
                  text: "\n"
            - kind: ForEachStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: EachKeyword
                  text: Each
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: frm
                - kind: Whitespace
                  text: " "
                - kind: InKeyword
                  text: In
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Forms
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: UnloadStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: UnloadKeyword
                          text: Unload
                        - kind: Whitespace
                          text: " "
                        - kind: Identifier
                          text: frm
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: NextKeyword
                  text: Next
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
