snapshots/syntax/library/statements/unload/unload_preserves_whitespace.snap
---
source: src/syntax/library/statements/unload.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: UnloadStatement
      children:
        - kind: UnloadKeyword
          text: Unload
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Form1
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
